--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,34 +13,34 @@ code {
 }
 
 /* style car-detail-info */
-.car-detail-info {
-  display: flex;
-  height: 45vh;
-}
+// .car-detail-info {
+//   display: flex;
+//   height: 45vh;
+// }
 
-fieldset {
-  min-width: 12rem;
-}
+// fieldset {
+//   min-width: 12rem;
+// }
 
-fieldset, .img_container {
-  flex: auto;
-}
+// fieldset, .img_container {
+//   flex: auto;
+// }
 
-fieldset > div {
-  line-height: 1.5rem;
-}
+// fieldset > div {
+//   line-height: 1.5rem;
+// }
 
-.img_container {
-  text-align: center;
-  line-height: 45vh;
+// .img_container {
+//   text-align: center;
+//   line-height: 45vh;
 
-}
+// }
 
-img {
-  max-width: 100%;
-  max-height: 100%;
-  vertical-align: middle;
-}
+// img {
+//   max-width: 100%;
+//   max-height: 100%;
+//   vertical-align: middle;
+// }
 /* end style car-detail-info */
 
 /* style table of cars */
@@ -111,30 +111,30 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-@media (max-width: 48rem) {
-  .car-detail-info {
-    flex-direction: column;
+// @media (max-width: 48rem) {
+//   .car-detail-info {
+//     flex-direction: column;
 
-  }
-  .car_details {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .car_details > div {
-    flex-basis: 50%;
-  }
-  .img_container {
-    line-height: 0;
-    height: 20vh;
-  }
-  img {
-    margin: 0 auto;
-    // object-fit: contain;
-  }
-  fieldset {
-    height: auto;
-  }
-}
+//   }
+//   .car_details {
+//     display: flex;
+//     flex-wrap: wrap;
+//   }
+//   .car_details > div {
+//     flex-basis: 50%;
+//   }
+//   .img_container {
+//     line-height: 0;
+//     height: 20vh;
+//   }
+//   img {
+//     margin: 0 auto;
+//     // object-fit: contain;
+//   }
+//   fieldset {
+//     height: auto;
+//   }
+// }
 
 @media (max-width: 36rem) {
   .producer {
