--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -150,14 +150,14 @@ code {
 $offset: 187;
 $duration: 1.4s;
 
-.spinner {
-  animation: rotator $duration linear infinite;
-}
+// .spinner {
+//   animation: rotator $duration linear infinite;
+// }
 
-@keyframes rotator {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(270deg); }
-}
+// @keyframes rotator {
+//   0% { transform: rotate(0deg); }
+//   100% { transform: rotate(270deg); }
+// }
 
 .path {
   stroke-dasharray: $offset;
@@ -188,10 +188,10 @@ $duration: 1.4s;
  }
 }
 
-.loadingRingContainer {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  height: 55vh;
-}
+// .loadingRingContainer {
+//   display: flex;
+//   flex-flow: column;
+//   justify-content: center;
+//   align-items: center;
+//   height: 55vh;
+// }
